# stocos

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile.in  Makefile  README.md  doxygen.cfg  test.json  version.h.in
.circleci/: config.yml
cmake/: auto-install.cmake  clang-format.cmake  cppcheck.cmake  doxygen.cmake  version.cmake
cmaketools/: auto-install.cmake  auto-install.txt  clang-format.cmake  cotire.cmake  doxygen.cmake
configuration/: eq2-FirstImprovement-FlipBit.json  stocos-GenericProblem.json  stocos-TSP-combination.json  stocos-TSP.json  stocos-aposd-oneMax.json  stocos-oneMax-x.json  stocos-oneMax.json
docs/: Articulation des classes.odg  INSTALL.md  index.html  input-configuration.md
docs/doxygen/: KBit_8hpp.html  KBit_8hpp__incl.map  KBit_8hpp__incl.md5  KBit_8hpp_source.html  QAP_8hpp.html  QAP_8hpp__incl.map  QAP_8hpp__incl.md5  QAP_8hpp_source.html  alldiff__check_8hpp.html  alldiff__check_8hpp_source.html  annotated.html  atomicOperation_8hpp.html  atomicOperation_8hpp__dep__incl.map  atomicOperation_8hpp__dep__incl.md5  atomicOperation_8hpp__incl.map  atomicOperation_8hpp__incl.md5  atomicOperation_8hpp_source.html  backtracking_8hpp.html  backtracking_8hpp__dep__incl.map  backtracking_8hpp__dep__incl.md5  backtracking_8hpp__incl.map  backtracking_8hpp__incl.md5  backtracking_8hpp_source.html  bestImprovement_8hpp.html  bestImprovement_8hpp__dep__incl.map  bestImprovement_8hpp__dep__incl.md5  bestImprovement_8hpp__incl.map  bestImprovement_8hpp__incl.md5  bestImprovement_8hpp_source.html  classes.html  classexprtk_1_1details_1_1T0oT1-members.html  classexprtk_1_1details_1_1T0oT1.html  classexprtk_1_1details_1_1T0oT1__coll__graph.md5  classexprtk_1_1details_1_1T0oT1__inherit__graph.map  classexprtk_1_1details_1_1T0oT1__inherit__graph.md5  classexprtk_1_1details_1_1T0oT1oT2-members.html  classexprtk_1_1details_1_1T0oT1oT2.html  classexprtk_1_1details_1_1T0oT1oT2__base__node-members.html  classexprtk_1_1details_1_1T0oT1oT2__base__node.html  classexprtk_1_1details_1_1T0oT1oT2__base__node__coll__graph.map  (+2537 more)
include/: main.cpp
include/filtering/: filters.h
include/messages/: french.h  messages.h
include/optimization/: nearestNeighbourAlgorithm.h  optimization.h  optimizationAlgorithm.h
include/problem/: QAP.h  QAP.hpp  continuousProblem.h  jobShopProblem.h  jobShopProblem.hpp  knapsack.h  latinSquare.h  magicSequence.h  magicSequence.hpp  nQueensProblem.h  oneMax.h  oneMax.hpp  problem.h  subsetSum.h  travelingSalesmanProblem.h
include/solution/: domain.h  domain.hpp  fitness.h  population.h  solution.h  solutionArray.h
include/solutionSelection/: maximization.h  maximization.hpp  minimization.h  selection_difference.h  solutionSelection.h  solutionSelection.hpp  solutionSelectionBuilder.h
include/solver/: solver.hpp
include/statistic/: sensor.h  sensorExperience.h  sensorFinal.h  sensorFitness.h  sensorNameCallingClass.h  sensorNameCallingClass.hpp  sensorNumRound.h  sensorNumRound.hpp  sensorSolution.h  sensorStopwatch.h  sensorStopwatch.hpp  statistic.h
include/stoppingCriteria/: criteria.h  criteriaBudget.h  criteriaFitnessObjectif.h  criteriaFitnessObjectif.hpp  stoppingCriteria.h  stoppingCriteria.hpp
instances/: JobShopProblem-instance-0.json  SubSetSum-5.json  SubSetSum-instance-5.json
instances/ContinuousProblem/: ackley-2-function.json  ackley-3-function.json  brent-function.json  quadratic-function-1.json  test.json
instances/GenericProblem/: quadratic-function-1.json
instances/JobShopProblem/: JobShopProblem-0.json
instances/OneMax/: onemax-10.json  onemax-1000.json  onemax-50.json
instances/SubSetSum/: SubSetSum-5.json
instances/TravelingSalesmanProblem/: TSP-10-1.json  TSP-a280.json  TSP-ali535.json  TSP-att48.json  TSP-att532.json  TSP-berlin52.json  TSP-bier127.json  TSP-brd14051.json  TSP-burma14.json  TSP-ch130.json  TSP-ch150.json  TSP-d1291.json  TSP-d1655.json  TSP-d18512.json  TSP-d198.json  TSP-d2103.json  TSP-d493.json  TSP-d657.json  TSP-dsj1000.json  TSP-eil101.json  TSP-eil51.json  TSP-eil76.json  TSP-fl1400.json  TSP-fl1577.json  TSP-fl3795.json  TSP-fl417.json  TSP-fnl4461.json  TSP-gil262.json  TSP-ulysses16.json  TSP-ulysses22.json  TSP-vm1748.json  travelingSalesmanProblem-10-1.json
instances/knapsackProblem/: knapsackProblem-20-1.json  knapsackProblem-25-1.json  knapsackProblem-40-1.json  knapsackProblem-5-1.json  knapsackProblem-instance-20-1.json  knapsackProblem-instance-25-1.json  knapsackProblem-instance-5-1.json
instances/nQueensProblem/: nqueensproblem.json
interface-python/: bonjour.hpp  exposed_decl.pypp.txt  lists of library files.txt  pylib_generator.py
modules/: CMakeLists.txt
plots/: solve.py  test.py
plots/oneMax/: callprocess.py  plot.py  solve.py  stocos-oneMax.json
post-treatment/: plot.py  solve.py
runConfig/: stocos-GenericProblem.json  stocos-aposd-oneMax.json  stocos-oneMax-x.json  stocos-oneMax.json
sources/: UnitTest.cpp  macro.h  main.cpp  main.cpp~
sources/filtering/: filters.cpp
sources/optimization/: nearestNeighbourAlgorithm.cpp  (+2 more)
sources/problem/: QAP.h  (+41 more)
tests-solver/: continuousProblem-ackleyFunction-N2-FirstImprovement-FlipBit.py  continuousProblem-brent-function-FirstImprovement.py  continuousProblem-eq1-FirstImprovement-FlipBit.py  continuousProblem-eq2-FirstImprovement-FlipBit.py  continuousProblem-wolfeFunction-3d-FirstImprovement-FlipBit.py  genericProblem-ackleyFunction-FirstImprovement-FlipBit.py  genericProblem-ackleyFunction-N2-FirstImprovement-FlipBit.py  genericProblem-brent-function-FirstImprovement.py  genericProblem-eq1-FirstImprovement-FlipBit.py  genericProblem-eq2-FirstImprovement-FlipBit.py  genericProblem-wolfeFunction-3d-FirstImprovement-FlipBit.py  nQueensProblem-TabuSearch-IntervalInteger.py  nQueensProblem.py  oneMax-BestImprovement-Neighborhood.py  oneMax-EvolutionaryAlgo-FlipBit.py  oneMax-FirstImprovement-FlipBit.py  oneMax-IteratedLocalSearch-FI-FlipBit.py  oneMax-OnePlusLambda-FlipBit.py  oneMax-TabuSearch-FlipBit.py
tests-unitaires/: UnitTest.cpp  unitTest.cpp  unitTest.h
(+425 files in other folders)
